# PaO_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  e-commerce.pro  resources.qrc
Exaples/: ex.json
Headers/Graphics/: DialogMessage.h  Filters.h  Homepage.h  Miniature.h  ProductsView.h  SingleProduct.h  SingleProductCreation.h  SingleProductEdit.h
Headers/Logic/: Clothing.h  Container.h  Electronics.h  FileUtils.h  PrintedMedia.h  Product.h  Store.h
Headers/Logic/Visitors/: ProductConstVisitorInterface.h  ProductEditorVisitor.h  ProductIconVisitor.h  ProductSingleProductVisitor.h  ProductVisitorInterface.h
Sources/: main.cpp
Sources/Graphics/: Filters.cpp  Homepage.cpp  Miniature.cpp  ProductsView.cpp  SingleProduct.cpp  SingleProductCreation.cpp  SingleProductEdit.cpp
Sources/Logic/: Clothing.cpp  Electronics.cpp  PrintedMedia.cpp  Product.cpp  Store.cpp
Sources/Logic/Visitors/: ProductEditorVisitor.cpp  ProductIconVisitor.cpp  ProductSingleProductVisitor.cpp
